<resources>
    <string name="app_name">PucQuiz</string>
    <string name="all_start">Começar</string>
    <string name="loading_questions">Carregando perguntas...</string>
    <string name="welcome_puc_quiz">Bem vindo ao PucQuiz</string>
    <string name="welcome_puc_quiz_select">Selecione uma disciplina</string>
    <string name="welcome_puc_quiz_redes">Redes II</string>
    <string name="welcome_puc_quiz_hibridas">Hibridas</string>
    <string name="welcome_puc_quiz_distribuidas">Distribuidas</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <string name="onboarding_greetings">Olá, %s você esta no</string>
    <string name="onboarding_instructions">Utilize o menu abaixo para navegar pelo App!</string>
    <string name="login_fragment_login_button_text">Fazer login</string>
    <string name="login_fragment_login_forgot_password_text">Esqueci minha \n senha</string>
    <string name="login_fragment_login_create_account_text">Criar conta</string>
    <string name="all_exit">Sair</string>
    <string name="all_yes">Sim</string>
    <string name="all_no">Não</string>
    <string name="all_atention">Atenção!</string>
    <string name="all_configurations">Configurações</string>
    <string name="logout_warning">Você está prestes a sair da aplicação! Deseja realmente sair da plataforma?</string>
    <string name="ranking_user_points">%d pontos</string>
    <string name="ranking_error_title">Oops...</string>
    <string name="ranking_error_description">Tivemos um problema para recuperar estes dados, por favor, tente novamente mais tarde.</string>
    
    <string-array name="grade_period">
<!--        <item>1</item>-->
<!--        <item>2</item>-->
        <item>3</item>
<!--        <item>4</item>-->
<!--        <item>5</item>-->
<!--        <item>6</item>-->
<!--        <item>7</item>-->
<!--        <item>8</item>-->
    </string-array>

    <string-array name="question_type">
        <item>ENADE</item>
        <item>Pessoal</item>
    </string-array>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

</resources>
